--- a/src/Components/Form/form.css
+++ b/src/Components/Form/form.css
@@ -77,6 +77,42 @@ button:hover{
     color: #fff;
 }
 /* MQ */
+@media only screen and (max-width: 320px) {
+
+    .wirhelfen{ 
+        color: #3dd7ac;
+        text-align:center;
+        font-family: 'Fira Sans', sans-serif;
+        font-weight: 900;
+        font-size: 3em;
+        font-variant-position: super;
+    }
+    .superhilfe{ 
+        text-align:center;
+        color: #3dd7ac;
+        font-size: 1em;
+        text-align: center;
+        font-family: 'Fira Sans', sans-serif;
+        font-weight: 400;
+        
+    }
+    
+    .helfen{
+        text-align: center;
+        margin-left: 4%;
+        display: inline-block;
+        flex-direction: column;
+        transition: 1s;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        padding-top: 5%;
+        padding-left: 10%;
+        width: 70%;
+    }
+}
+
 @media only screen and (max-width: 576px) {
 
     .wirhelfen{ 
@@ -93,6 +129,7 @@ button:hover{
         font-size: 1em;
         font-family: 'Fira Sans', sans-serif;
         font-weight: 400;
+        margin-top: -140%;
         
     }
     
@@ -128,6 +165,7 @@ button:hover{
         font-family: 'Fira Sans', sans-serif;
         font-weight: 400;
         padding-top: 3%;
+        margin-top: -110%;
     }
     
     .helfen{
@@ -149,11 +187,12 @@ button:hover{
 
 /* @media only screen and (max-width: 992px) {
 
-    .wirhelfen{ color: #3dd7ac;
+    .wirhelfen{ 
+        color: #3dd7ac;
         text-align:center;
         font-family: 'Fira Sans', sans-serif;
         font-weight: 900;
-        font-size: 2.4em;
+        font-size: 3em;
         font-variant-position: super;
     }
     .superhilfe{ 
@@ -163,14 +202,14 @@ button:hover{
         text-align: center;
         font-family: 'Fira Sans', sans-serif;
         font-weight: 400;
-        grid-column: 1/2;
         padding-top: 3%;
+        margin-top: -0%;
     }
     
     .helfen{
         text-align: center;
         margin-left: 4%;
-        display: flex;
+        display: inline-block;
         flex-direction: column;
         transition: 1s;
     }
@@ -180,5 +219,47 @@ button:hover{
         padding-top: 5%;
         padding-left: 10%;
         width: 70%;
+    }
+}
+@media only screen and (max-width: 1024px) {
+    .wirhelfen{ color: #3dd7ac;
+        text-align:left;
+        font-family: 'Fira Sans', sans-serif;
+        font-weight: 900;
+        font-size: 2.4em;
+        font-variant-position: super;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        height: 100%;
+    
+    }
+    .superhilfe{ 
+        color: #3dd7ac;
+        font-size: 0.77em;
+        text-align: left;
+        font-family: 'Fira Sans', sans-serif;
+        font-weight: 400;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-top: -70%;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 20%;
+        grid-row: 1/-1;
+        grid-column: 2/3;
+    }
+    .helfen{
+        margin-left: 4%;
+        margin-top: 2%;
+        display: grid;
+        grid-template-columns: 40% 50%;
+        justify-content: center;
+        transition-duration: 2s;
+        padding-top: 10%;
+        height: 100vh
     }
 } */
